<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.26" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="320dp"
            android:layout_height="560dp" >

            <TextView
                android:id="@+id/EditTitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/EditTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/Uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@string/UserName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/namehint"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/Udob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserDOB"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userdob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dobhint"
                android:inputType="date" >
            </EditText>

            <TextView
                android:id="@+id/Uaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserAddress"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/useraddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Addresshint"
                android:inputType="textMultiLine"
                android:text="@string/blank" />

            <TextView
                android:id="@+id/Uresidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserResiNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userresidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/residencehint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/Uoffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserOfficeNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/useroffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/officehint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/Udoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserDoctorNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userdoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/doctorhint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/Ubloodgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserBloodGroup"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userbloodgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/bghint"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/Uheight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserHeight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userheight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/heighthint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/Uweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserWeight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/Ubp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserBloodPressure"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/bphint" />

            <TextView
                android:id="@+id/Usurgery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserSurgery"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/usersurgery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/surghint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/Umedications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserMedications"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/usermedications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/Uvaccination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserVaccination"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/uservaccination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/Uallergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserAllergy"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/userallergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/ueditpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EditPwd"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/usereditpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="38dp" >

        <Button
            android:id="@+id/Savebutton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            
            android:text="@string/SaveButtonLabel" />

        <Button
            android:id="@+id/Cancelbutton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            
            android:text="@string/CancelButtonLabel" />

    </RelativeLayout>

</LinearLayout>