<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/viewbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/Viewbuttonlabel" />

    <Button
        android:id="@+id/SOSbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/Sosbuttonlabel" />

    <TextView
        android:id="@+id/HomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/Hometitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SOSbutton"
        android:layout_alignRight="@+id/SOSbutton"
        android:layout_below="@+id/SOSbutton"
        android:layout_marginTop="51dp"
        android:text="@string/exitString" />

</RelativeLayout>