<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ViewInformationtxt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="408dp" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="321dp"
            android:layout_height="595dp" >

            <TextView
                android:id="@+id/NameTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/UserName"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/DobTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserDOB"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/AddressTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserAddress"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ResiNumTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserResiNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowResiNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/OfficeNumTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserOfficeNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowOfficeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/DoctorNumTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserDoctorNumber"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowDoctorNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/BloodGroupTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserBloodGroup"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowBloodgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/HeightTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserHeight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/WeightTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserWeight"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/BpTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserBloodPressure"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowBp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/SurgeryTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserSurgery"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowSurgery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/MedicationTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserMedications"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowMedication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/VaccinationTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserVaccination"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowVaccination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/AllergyTxtbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserAllergy"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/ShowAllergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/EditButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/EditButtonLabel" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            
            android:text="@string/backButtonText" />

    </RelativeLayout>

</LinearLayout>